--- a/web/style.css
+++ b/web/style.css
@@ -21,16 +21,52 @@ img {
 
 #Icons {
   display: flex;
-  gap: 20px;
+  gap: 10px;
   margin: 20px 50px;
 }
 
 .Icon {
   position: relative;
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
   background: rgb(50, 50, 50);
+  display: none;
+}
+
+.IconGreen {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background: rgb(43, 255, 0);
+  display: none;
+}
+
+.IconRed {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background: rgb(255, 0, 0);
+  display: none;
+}
+
+.IconGreenSheriff {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background: rgb(43, 255, 0);
+  display: none;
+}
+
+.IconRedSheriff {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background: rgb(255, 0, 0);
   display: none;
 }
 
@@ -38,6 +74,42 @@ img {
   color: white;
   position: absolute;
   font-size: 16px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.IconGreen b {
+  color: white;
+  position: absolute;
+  font-size: 25px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.IconRed b {
+  color: white;
+  position: absolute;
+  font-size: 25px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.IconGreenSheriff b {
+  color: white;
+  position: absolute;
+  font-size: 25px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.IconRedSheriff b {
+  color: white;
+  position: absolute;
+  font-size: 25px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -53,7 +125,71 @@ img {
 #ID {
   font-family: sans-serif;
   font-weight: 700;
+  font-size: 20px;
+  position: fixed;
+  top: 150px;
+  right: 45px;
+  margin: 10px;
+}
+
+#Bank {
+  font-family: sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  position: fixed;
+  top: 210px;
+  right: 45px;
+  margin: 10px;
+}
+
+#Cash {
+  font-family: sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  position: fixed;
+  top: 240px;
+  right: 45px;
+  margin: 10px;
+}
+
+.TimeContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.seatbeltContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 120px;
+  left: 360px;
+  margin: 10px;
+}
+
+#Time {
+  width: 80px;
+  height: 3px;
+  background-color: #202020;
+  border-radius: 15px;
+  padding: 20px;
+  color: #ffd966;
+  text-align: center;
+  font-family: sans-serif;
+  font-weight: 700;
   font-size: 16px;
+  line-height: 5px; 
+}
+
+#Job {
+  font-family: sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  position: fixed;
+  top: 180px;
+  right: 45px;
+  margin: 10px;
 }
 
 .outerIcon {
@@ -66,18 +202,14 @@ img {
   display: none;
 }
 
-/* Logo */
-
 #Logo {
   position: absolute;
-  top: 20px;
+  top: 60px;
   right: 40px;
   max-width: 128px;
   opacity: 0.8;
   display: none;
 }
-
-/* Animations */
 
 .flash {
   -webkit-animation: flash 1s;
